test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/unclosed_initializer.plx
pub fn main(none) i32 {
    arr: [2]i32 = $(1, 2
    return arr[0]
}
